Fix logo on projects resume, test fix icon visibility

--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,7 @@ body {
   left: 48px;
   top: 40px;
   margin-top: 0;
+  z-index: 999;
   transition: all 0.4s ease-in-out;
 }
 
@@ -216,6 +217,19 @@ svg {
   }
 
   .header-logo svg {
+    width: 150px;
+    align-content: center;
+  }
+
+  .header-logo-shrinked {
+    height: 50px;
+    top: 2rem;
+    left: 1rem;
+    margin: 0;
+    display: flex;
+  }
+
+  .header-logo-shrinked svg {
     width: 150px;
     align-content: center;
   }
